# oracles

./: .gitignore  CONTRIBUTORS.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
core/: pyproject.toml
core/oracle_core/: __init__.py  app.py  hub_client.py  metrics.py  protocol.py  ratelimit.py  signing.py
core/tests/: test_core.py
docs/: GALLERY.md  README.md  en.md  es.md  platon-preview.en.md  platon-preview.es.md  platon-preview.ru.md  portal-vs-products.en.md  ru.md
docs/recordings/: oracle-portal.webm
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/public/ambient/: cosmic-bg.js
frontend/public/ambient/ablation/: index.html
frontend/public/ambient/fermat/: index.html
frontend/public/ambient/landauer/: index.html
frontend/public/ambient/percola/: index.html
frontend/public/media/: ablation.webm  aestus.webm  betti.webm  chronos.webm  colony.webm  fermat.webm  fourier.webm  gauss.webm  kantor.webm  landauer.webm  lattice.webm  lumen.webm  murmuration.webm  percola.webm  platon.webm  sortes.webm  turing.webm
frontend/public/scenes/: ablation.html  fermat.html  landauer.html  percola.html
frontend/scripts/: capture-card-loops.mjs  capture-landing.mjs  capture-physics.mjs
frontend/src/: App.tsx  CosmicCanvas.tsx  Home.tsx  ScenePreview.tsx  index.css  landing.css  main.tsx  oracles.ts  sceneLoaders.ts
frontend/src/scenes/: aestus.tsx  betti.tsx  chronos.tsx  colony.tsx  fourier.tsx  gauss.tsx  kantor.tsx  lattice.tsx  lumen.tsx  murmuration.tsx  platon.tsx  sortes.tsx  turing.tsx
nginx/: oracles.conf
oracles/ablation/: Dockerfile  README.md  pyproject.toml
oracles/ablation/ablation/: __init__.py  capabilities.py  main.py  sandpile.py
oracles/ablation/docs/: en.md  es.md  ru.md
oracles/ablation/frontend/: index.html
oracles/ablation/tests/: test_ablation.py
oracles/aestus/: Dockerfile  README.md  pyproject.toml
oracles/aestus/aestus/: capabilities.py  main.py  rsw.py
oracles/aestus/tests/: test_aestus.py
oracles/betti/: Dockerfile  README.md  pyproject.toml
oracles/betti/betti/: __init__.py  capabilities.py  homology.py  main.py
oracles/betti/tests/: test_betti.py
oracles/chronos/: Dockerfile  README.md  pyproject.toml
oracles/chronos/chronos/: capabilities.py  main.py  vdf.py
oracles/chronos/docs/: en.md  es.md  ru.md
oracles/chronos/frontend/: index.html
oracles/chronos/tests/: test_chronos.py
oracles/colony/: README.md  pyproject.toml
oracles/colony/colony/: capabilities.py  main.py  tsp.py
oracles/colony/docs/: en.md  es.md  ru.md
oracles/colony/frontend/: index.html
oracles/colony/tests/: test_colony.py
oracles/fermat/: Dockerfile  README.md  pyproject.toml
oracles/fermat/docs/: en.md  es.md  ru.md
oracles/fermat/fermat/: __init__.py  capabilities.py  eikonal.py  main.py
oracles/fermat/frontend/: index.html
oracles/fermat/tests/: test_fermat.py
oracles/fourier/: Dockerfile  README.md  pyproject.toml
oracles/fourier/fourier/: __init__.py  capabilities.py  main.py  spectral.py
oracles/fourier/tests/: test_fourier.py
oracles/gauss/: README.md  pyproject.toml
oracles/gauss/gauss/: capabilities.py  gp.py  main.py
oracles/gauss/tests/: test_gauss.py
oracles/kantor/: Dockerfile  README.md  pyproject.toml
oracles/kantor/kantor/: __init__.py  capabilities.py  main.py  transport.py
oracles/kantor/tests/: test_kantor.py
oracles/landauer/: Dockerfile  README.md  pyproject.toml
oracles/landauer/docs/: en.md  es.md  ru.md
oracles/landauer/frontend/: index.html
oracles/landauer/landauer/: __init__.py  capabilities.py  main.py  thermo.py
oracles/landauer/tests/: test_landauer.py
oracles/lattice/: README.md  pyproject.toml
oracles/lattice/docs/: en.md  es.md  ru.md
oracles/lattice/frontend/: index.html
oracles/lattice/lattice/: capabilities.py  halton.py  main.py
oracles/lattice/tests/: test_lattice.py
oracles/lumen/: README.md  pyproject.toml
oracles/lumen/docs/: en.md  es.md  ru.md
oracles/lumen/frontend/: index.html
oracles/lumen/lumen/: capabilities.py  main.py  pagerank.py
oracles/lumen/tests/: test_lumen.py
oracles/murmuration/: README.md  pyproject.toml
oracles/murmuration/docs/: en.md  es.md  ru.md
oracles/murmuration/frontend/: index.html
oracles/murmuration/murmuration/: __init__.py  capabilities.py  consensus.py  main.py
oracles/murmuration/tests/: test_murmuration.py
oracles/oracle-family/: Dockerfile  pyproject.toml
oracles/oracle-family/oracle_family_app/: __init__.py  main.py
oracles/oracle-family/tests/: test_family.py
oracles/percola/: Dockerfile  README.md  pyproject.toml
oracles/percola/docs/: en.md  es.md  ru.md
oracles/percola/frontend/: index.html
oracles/percola/percola/: __init__.py  capabilities.py  main.py  percolation.py
oracles/percola/tests/: test_percola.py
oracles/platon/: README.md  docker-compose.yml  start.sh
oracles/platon/backend/: Dockerfile
oracles/platon/backend/platon/: aimarket.py  config.py  main.py  simulation.py
oracles/platon/backend/tests/: conftest.py  test_api.py
oracles/platon/frontend/: nginx.conf
oracles/platon/frontend/src/components/: AskPanel.tsx
oracles/platon/frontend/src/hooks/: usePlatonSocket.ts
oracles/platon/scripts/: connect-ecosystem.sh
oracles/sortes/: README.md  pyproject.toml
oracles/sortes/sortes/: __init__.py  capabilities.py  main.py  vrf.py
oracles/sortes/tests/: test_sortes.py
oracles/turing/: README.md  pyproject.toml
oracles/turing/docs/: en.md  es.md  ru.md
oracles/turing/frontend/: index.html
oracles/turing/tests/: test_turing.py
oracles/turing/turing/: bluenoise.py  capabilities.py  main.py
