[project]
name = "oracle-core"
version = "0.1.0"
description = "Shared AIMarket v2 infrastructure for the oracle family"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]
pqc = ["dilithium-py>=1.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
