[project]
name = "aestus-oracle"
version = "0.1.0"
description = "Aestus — RSW time-lock puzzle oracle on oracle-core"
requires-python = ">=3.11"
dependencies = ["oracle-core"]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aestus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
