[project]
name = "kantor-oracle"
version = "0.1.0"
description = "Kantor — exact optimal-transport (Wasserstein) oracle with a Kantorovich dual certificate, on oracle-core"
requires-python = ">=3.11"
dependencies = ["oracle-core", "numpy"]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kantor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
