[project]
name = "lattice-oracle"
version = "0.1.0"
description = "Lattice — low-discrepancy (quasi-random) sequence oracle on oracle-core"
requires-python = ">=3.11"
dependencies = ["oracle-core"]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0", "numpy>=1.26"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lattice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
