[project]
name = "oracle-family"
version = "0.1.0"
description = "AIMarket Oracle Family — one endpoint serving every oracle_core oracle"
requires-python = ">=3.11"
# The individual oracle packages (chronos/lattice/murmuration/lumen/colony/turing)
# are installed by the Dockerfile via local paths, not from an index.
dependencies = ["oracle-core", "httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oracle_family_app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
